--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ ul.list li {
 	width: 900px;
 	height: 111px;
 	background: url(images/book_bottom.jpg) no-repeat center top;
+	position: relative;
 }
 
 .book_bottom p {
@@ -261,7 +262,9 @@ img.picture {
 
 .page-index {
 	position: absolute;
+	top:50%;
 	right: 10px;
+	margin-top: -5px;
 	background: url(images/titles_bg.gif) repeat-x top;
 	padding: 5px 10px;
 }
